[gd_scene load_steps=19 format=2]

[ext_resource path="res://Animals/Cat Sprite Sheet Jumping and Sleeping.png" type="Texture" id=1]
[ext_resource path="res://Music and Sounds/SES_Animals_SFX_Cat_Purring_2.wav" type="AudioStream" id=2]
[ext_resource path="res://Music and Sounds/WindChimes_gFE8Q_01.wav" type="AudioStream" id=3]
[ext_resource path="res://Animals/SaveCat.gd" type="Script" id=4]
[ext_resource path="res://UI/panel_Intro.png" type="Texture" id=5]
[ext_resource path="res://World/gdb-playstation-2 cross flat.png" type="Texture" id=6]
[ext_resource path="res://fonts/PixelTandysoft-0rJG.ttf" type="DynamicFontData" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 31, 23 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 31, 0, 31, 23 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Sleep",
"speed": 1.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 10.9999
height = 16.0

[sub_resource type="CircleShape2D" id=5]
radius = 127.004

[sub_resource type="CircleShape2D" id=6]
radius = 43.0

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 14
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=10]
size = 15
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=11]
size = 15
font_data = ExtResource( 7 )

[sub_resource type="CircleShape2D" id=7]
radius = 16.0

[node name="SaveCat" type="StaticBody2D"]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 3 )
animation = "Sleep"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, 2 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="PurrStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -15.0

[node name="ChimeStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 5.333

[node name="ChimeTriggerArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChimeTriggerArea2D"]
shape = SubResource( 5 )

[node name="PurrTriggerArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PurrTriggerArea2D"]
shape = SubResource( 6 )

[node name="SaveCatDialogue" type="PopupDialog" parent="."]
visible = true
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.4, 0.4 )

[node name="PanelSprite" type="Sprite" parent="SaveCatDialogue"]
texture = ExtResource( 5 )

[node name="RichTextLabel" type="RichTextLabel" parent="SaveCatDialogue"]
margin_left = -145.0
margin_top = -27.5
margin_right = 152.0
margin_bottom = 27.5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true
bbcode_text = "[center]Will you rub the cat's belly?[/center]"
text = "Will you rub the cat's belly?"

[node name="Continue" type="RichTextLabel" parent="SaveCatDialogue"]
margin_left = 107.5
margin_top = 17.5
margin_right = 237.5
margin_bottom = 72.5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 9 )
text = "Continue
"

[node name="HBoxContainer" type="HBoxContainer" parent="SaveCatDialogue"]
margin_left = -52.5
margin_top = 2.5
margin_right = 88.5
margin_bottom = 32.5

[node name="ButtonSprite" type="Sprite" parent="SaveCatDialogue/HBoxContainer"]
position = Vector2( 150, 25 )
texture = ExtResource( 6 )

[node name="YesButton" type="Button" parent="SaveCatDialogue/HBoxContainer"]
margin_right = 50.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 30 )
custom_fonts/font = SubResource( 10 )
text = "Yes"

[node name="NoButton" type="Button" parent="SaveCatDialogue/HBoxContainer"]
margin_left = 54.0
margin_right = 104.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 30 )
custom_fonts/font = SubResource( 11 )
text = "No"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="BellyRubArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BellyRubArea"]
shape = SubResource( 7 )

[connection signal="area_entered" from="ChimeTriggerArea2D" to="." method="_on_ChimeTriggerArea2D_area_entered"]
[connection signal="area_exited" from="ChimeTriggerArea2D" to="." method="_on_ChimeTriggerArea2D_area_exited"]
[connection signal="area_entered" from="PurrTriggerArea2D" to="." method="_on_PurrTriggerArea2D_area_entered"]
[connection signal="area_exited" from="PurrTriggerArea2D" to="." method="_on_PurrTriggerArea2D_area_exited"]
[connection signal="pressed" from="SaveCatDialogue/HBoxContainer/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="BellyRubArea" to="." method="_on_BellyRubArea_area_entered"]
